--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,9 +163,8 @@ ul.navbar-nav.mr-auto {
 }
 
 /* About css  */
-
 .about_section {
-  height: 70vh;
+  margin-bottom: 3rem;
 }
 
 .about_section h3 {
@@ -201,23 +200,28 @@ ul.navbar-nav.mr-auto {
   line-height: 28px;
 }
 .about_img {
-  width: 32vw;
   margin-top: 30px;
 }
 .about_img img {
   width: 100%;
   flex-basis: fit-content;
   background-size: cover;
+  height: 445px;
 }
 
 /* Menu css */
+.bg_gray {
+  width: 100%;
+  background-color: #f8f8f8;
+  height: 100%;
+}
 
 .menu_section {
   width: 100%;
   background-color: #f8f8f8;
   height: 100%;
 }
-.menu_heading {
+.menu_heading h1 {
   text-align: center;
   font-family: Cormorant Garamond;
   font-weight: 600;
@@ -232,6 +236,15 @@ ul.navbar-nav.mr-auto {
   width: 30px;
   height: 30px;
 }
+.menu_footer1 {
+  display: flex;
+  background-color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 2px 10px;
+  line-height: 39px;
+  height: 50px;
+}
 
 .menu_footer {
   display: flex;
@@ -240,7 +253,7 @@ ul.navbar-nav.mr-auto {
   font-weight: 600;
   padding: 0px 10px;
   line-height: 39px;
-  height: 45px;
+  height: 41px;
 }
 
 .menu_section .arrow {
@@ -249,7 +262,7 @@ ul.navbar-nav.mr-auto {
 
 .menu_section .first_menu,
 .menu_section .second_menu {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   transition: 0.3s;
 }
@@ -262,30 +275,6 @@ ul.navbar-nav.mr-auto {
 .menu_section .second_menu:hover,
 .menu_section .left_menu:hover {
   transform: scale(1.1);
-}
-
-.menu_section .first_menu:before,
-.menu_section .second_menu:before,
-.menu_section .left_menu:before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: absolute;
-  background: #000;
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 2;
-  opacity: 0;
-  -moz-transition: 0.5s ease;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
-}
-.menu_section .first_menu:hover:before,
-.menu_section .second_menu:hover:before,
-.menu_section .left_menu:hover:before {
-  opacity: 1;
 }
 
 /* contact form css */
@@ -326,8 +315,14 @@ ul.navbar-nav.mr-auto {
   width: 5%;
 }
 
+.contact_form input::placeholder {
+  font: 12px/3 sans-serif;
+}
+.contact_form textarea::placeholder {
+  font: 12px/2 sans-serif;
+}
 .contact_form .form-group span i {
-  font-size: 16px;
+  font-size: 14px;
 
   color: #6c757d;
 }
