--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,19 +581,41 @@ ul.navbar-nav.mr-auto {
   width: 97%;
 }
 
+
+.footer_section .footer_back_icon{
+  transform: rotate(180deg);
+}
 /* footer section end here */
 
 /* Menu Css */
 .menu_item1 {
   position: relative;
+
+  
 }
 .menu_item2 {
   position: relative;
   margin-top: 54px;
 }
+.menu_heading{
+  font-size: 58px;
+    font-weight: bold;
+    font-family: 'Cormorant Garamond';
+        margin-top: -15px;
+}
+.menu_content{
+  margin-bottom: 1rem;
+}
+.menu_item1 p, .menu_item2 p{
+  margin-bottom: 0px;
+}
 .line1 {
   margin-bottom: 8px;
-  width:60%;
+  width:50%;
+}
+
+.menu_content .menu_small_des{
+  color: #666666;
 }
 
 .line2 {
@@ -601,7 +623,7 @@ ul.navbar-nav.mr-auto {
     /* top: 34px; */
     margin-top: 14px;
     left: 132px;
-    width: 60%;
+    width: 50%;
 }
 
 .menu_price{
@@ -610,8 +632,8 @@ ul.navbar-nav.mr-auto {
 }
 
 .right_menu_img img{
-  width: 100%;
-    height: 250px;
+     width: 500px;
+    height: 350px;
 }
 
   .left_menu_bg_grey {
