--- a/assets/css/testimonial.css
+++ b/assets/css/testimonial.css
@@ -1,110 +1,181 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-body{
- min-height: 100vh;
- display: flex;
- align-items: center;
- justify-content: center ;
- background-color: rgb(219, 211, 211);
+
+
+.testimonial_body{
+        left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    width: 58%;
+    background: transparent;
+   
+    top: 20%;
 }
-.slide-container{
+
+.swiper-cards .swiper-slide {
+    overflow: visible;
+}
+
+.swiper-slide .img-1 {
+    background-image: url('../images/pic-1.png');
+}
+
+.swiper-slide .image {
+    width: 100px;
+    height: 100px;
+    border: 5px solid #492408;
+    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 11px;
+}
+
+.slide-container {
     max-width: 1120px;
     width: 100%;
-     padding:40px 0;
+    padding: 40px 0;
+    margin-top: 56px;
 }
 
-.slide-content{
+/* .slide-content {
     margin: 0 40px;
-    overflow:hidden;
+    overflow: hidden;
     border-radius: 25px;
-}
+} */
 
-.card{
-  
+.card {
+
     border-radius: 25px;
     background-color: #fff;
 }
-.image-content, .card-content{
+
+.image-content,
+.card-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 14px ;
+    padding: 88px 14px 10px;
 }
 
-.image-content{
+.image-content {
     row-gap: 5px;
 }
-.rating{
-        color: #ff7800;
-}
-.card-image{
-    position: relative;
-    height:150px;
-    width:150px;
-    border-radius: 50%;
-    background-color: #fff;
-    padding:3px;
+
+.rating {
+    color: #e9b61b;
 }
 
-.card-image .card-img{
-    height:100%;
-    width:100%;
+.card-image {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-color: #fff;
+    padding: 3px;
+}
+
+.card-image .card-img {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     border-radius: 50%;
-    border:4px solid rgb(226, 16, 16)
+    border: 4px solid rgb(226, 16, 16)
 }
-.name{
+
+.name {
     font-size: 18px;
     font-weight: 500;
     color: #333;
 }
 
-.description{
+.description {
     font-size: 14px;
     color: #707070;
     text-align: center;
 }
 
-.button{
-    border:none;
+.button {
+    border: none;
     font-size: 16px;
-    color:#fff;
-    padding:8px 16px;
-    background-color:#4070f4;
+    color: #fff;
+    padding: 8px 16px;
+    background-color: #4070f4;
     border-radius: 6px;
     margin: 14px;
     cursor: pointer;
-    transition:all 0.3s
+    transition: all 0.3s
 }
 
-.button:hover{
+.button:hover {
     background: #265d26;
 }
 
-.swiper-navBtn{
-    color:blue;
+.swiper-navBtn {
+    color: blue;
 }
 
-.swiper-navBtn:hover{
-    color:rgb(117, 117, 212);
+.swiper-navBtn:hover {
+    color: rgb(117, 117, 212);
 }
 
-.swiper-button-next{
-    right:0;
+.swiper-button-next {
+    right: 15rem;
 }
 
-.swiper-button-prev{
-    left:0;
+.swiper-button-prev {
+    left: 15rem;
+}
+
+
+@media screen and (max-width:820px) {
+     .testimonial_body {
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    width: 58%;
+    background: transparent;
+    top: 0%;
+}
+    .slide-content {
+        margin: 0 10px;
+    }
+
+    .swiper-navBtn {
+        display: none;
+    }
+   
 }
 
 @media screen and (max-width:768px) {
-    .slide-content{
-        margin:0 10px;
+     .testimonial_body {
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    width: 58%;
+    background: transparent;
+    top: 0%;
+}
+    .slide-content {
+        margin: 0 10px;
     }
-    .swiper-navBtn{
+
+    .swiper-navBtn {
         display: none;
     }
+   
 }
