--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -741,11 +741,11 @@ ul.navbar-nav.mr-auto {
     width: 10%;
 }
 .contact_form button {padding: 5px; font-size: 15px;}
- .map_image {
-        width: 345px !important;
-    height: 250px !important;
-    padding-top: 20px;
-  }
+ 
+  .menu_section .arrow {
+    margin-left: 37px !important;
+}
+      /* margin-left: 37px !important; */
 
 
   /* Testimonial CSS */
@@ -758,10 +758,7 @@ ul.navbar-nav.mr-auto {
    
     overflow-y: hidden;
 }
-.testimonials_section .testimonial_banner {
-    width: 100%;
-    height: 400px;
-}
+
 
   .slide-container {
     max-width: 1120px;
@@ -800,6 +797,57 @@ ul.navbar-nav.mr-auto {
     padding: 56px 0 10px;
 }
 
+}
+
+
+
+@media only screen and (min-width: 375px) {
+  .header_contact .contact p.number {
+    font-size: 15px;
+}
+.social .social_icon {
+    padding: 0px;
+    width: 23px ;
+}
+.header_contact img {
+    width: 26px ;
+}
+
+  .menu_section .arrow {
+    margin-left: 37px !important;
+}
+  .map_image{
+    width: 348px !important;
+    overflow: hidden;
+  }
+
+  .testimonials_section .testimonial_banner {
+    width: 100%;
+    height: 400px;
+}
+
+.slide-container {
+    max-width: 1120px;
+    width: 100%;
+    padding: 26px 0;
+    overflow-y: hidden;
+    margin-top: 0px;
+}
+.testimonials_section .testimonials_heading {
+   color: #fff;
+    font-family: Cormorant Garamond;
+    text-align: center;
+    margin: 73px 0 0px 0px !important;
+    font-size: 30px !important;
+}
+.swiper-slide .image {
+    width: 70px;
+    height: 70px;
+    top: 4px;
+}
+.quotes img {
+    width: 40px;
+}
 
 }
 
@@ -810,34 +858,31 @@ ul.navbar-nav.mr-auto {
     margin: 0px !important;
 }
 .header_contact img {
-    width: 28px !important;
+    width: 24px !important;
 }
   .header_contact .contact p.call_us {
-    font-size: 13px !important;
+    font-size: 11px !important;
     line-height: 9px !important;
 }
 .header_contact .contact p.number {
-    font-size: 17px !important;
+    font-size: 14px !important;
 }
 .logo img {
-    width: 6rem !important;
+    width: 6rem ;
 }
 .social .social_icon {
     padding: 0px;
-    width: 28px !important;
+    width: 24px !important;
 }
 
 .menu_section .arrow {
-    margin-left: 54px !important;
+    margin-left: 54px ;
 }
 .contact_form .form {
    
     padding: 7px 74px 0px 45px;
 }
-.map_image{
-  margin-top: 20px !important;
-  width: 385px !important;
-}
+
 .form-control {
   
     padding: 5px;
@@ -870,6 +915,72 @@ ul.navbar-nav.mr-auto {
 
 }
 
+@media only screen and (min-width : 414px) {
+  .header_contact {
+    display: flex;
+    padding-left: 10px;
+}
+ .header_contact .contact {
+    left: 4px !important;
+    margin: 0px !important;
+}
+.header_contact img {
+    width: 24px !important;
+}
+  .header_contact .contact p.call_us {
+    font-size: 11px !important;
+    line-height: 9px !important;
+}
+.header_contact .contact p.number {
+    font-size: 14px !important;
+}
+.logo img {
+    width: 6rem !important;
+}
+.social .social_icon {
+    padding: 0px;
+    width: 24px !important;
+}
+.menu_section .arrow {
+    margin-left: 54px !important;
+}
+.contact_form .form {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 11px 77px 0px 40px;
+}
+.contact_form .form-group {
+    position: relative;
+    margin-bottom: 10px;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0px 0 7px 0px;
+}
+.contact_form .form-group span {
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    border-right: 2px solid #6c757d;
+    width: 6%;
+}
+.contact_form button {
+    width: 45%;
+    padding: 5px;
+    background: transparent;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    border: 1px solid;
+    cursor: pointer;
+}
+.map_image{
+  margin-top: 20px !important;
+  width: 385px !important ;
+}
+}
 
 
 @media only screen and (max-width : 540px) {
@@ -1332,6 +1443,30 @@ img.left_menu_img {
 
 }
 
+
+@media only screen and (min-width : 1440px) {
+ .swiper-button-next{ 
+  right: 5rem;
+    margin-top: 2rem;
+   
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    opacity: 0.8;
+}
+.swiper-button-prev{ 
+  left: 5rem;
+    margin-top: 2rem;
+   
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    opacity: 0.8;
+}
+.map_image{
+  width: 540px !important;
+}
+}
 /* Large screens ----------- */
 @media only screen and (min-width : 1824px) {
 
